# gpindex-rs

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
core/: Cargo.toml
core/src/: elementary_indexes.rs  lib.rs  means.rs
docs/diagrams/: gpindex-rs.drawio
gpindexr/: .gitignore  DESCRIPTION  NAMESPACE
gpindexr/R/: extendr-wrappers.R
gpindexr/src/: Makevars.in  Makevars.win.in  entrypoint.c  gpindexr-win.def
gpindexr/src/rust/: Cargo.toml  document.rs
gpindexr/src/rust/src/: lib.rs
pyapi/: README.md  pyproject.toml
pyapi/data/: ms_prices.csv  ms_weights.csv
pyapi/docs/: api-v2.drawio
pyapi/examples/: example.py
pyapi/src/pyas/: __init__.py  aggregation_structure.py  formulas.py  helpers.py  means.py  price_index.py
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/tests/: test.py
