[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "my_rust_lib"
description = "Python bindings for my Rust library"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]
dynamic = ["version"]

[tool.maturin]
# Point maturin to the correct Rust manifest relative to this file
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
