[package]
name = 'gpindexr'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'gpindexr'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = { version = "0.7", features = ["ndarray"] }
ndarray = "0.15"
core-logic = { path = "../../../core" }


[profile.release]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1


[workspace]
